# DRFORMLearn

./: Dockerfile  docker-compose.yml  pyproject.toml
drf/drf/: settings.py  urls.py
drf/main/: admin.py  models.py  serializers.py  tests.py  views.py
drf/main/management/commands/: data_faker.py
drf/main/migrations/: 0001_initial.py  0002_remove_sale_quantity_remove_sale_book_salebook_and_more.py  0003_remove_salebook_quantity_sale_quantity.py  0004_remove_sale_quantity_salebook_quantity.py
drf/main/tests/: factories.py  test_author_api.py  test_book_api.py  test_main.py  test_publisher_api.py  tests.py  tests_books_api.py
